--- a/mladja_pesaka/main.css
+++ b/mladja_pesaka/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&family=Special+Elite&display=swap');
 *{
   padding:0;
   margin: 0;
@@ -13,8 +14,9 @@ width:100%;
 color:white;
 position:fixed;
 top:0;
-background-color:#1051A5;
+background-color:#0a366e;
 height:100px;
+z-index:100;
 }
 h1{
   padding:25px;
@@ -51,14 +53,15 @@ h1{
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #1051A5;
+  background-color: #0a366e;
   color:white;
-  border-radius:5px;
+  border-radius:0 0 10px 10px;
   position: absolute;
   top: 58px;
   right: 0;
   max-width:30%;
-  z-index: 1;
+  z-index: 1;position:absolute;
+  top:100px;
 }
 
 /* Style the menu items */
@@ -196,11 +199,43 @@ margin:auto;
   font-weight: bold;
 }
 /* Style for the "Features" section */
+.fet1{
+  width:100%;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+  align-items:center;
+  padding:50px;
+  gap:10%px;
+}
+span{
+ font-style: italic;
+ text-decoration:underline;
+}
+.fet1 img , .fet2 img{
+  width:100%;
+}
+.sub{
+  width:40%;
+}
+.sub h3{
+  text-align:center;
+  padding:50px;
+}
+.fet2{
+  display:flex;
+  flex-wrap: wrap;
+  gap:10%;
+  padding:50px;
+  flex-direction:row-reverse;
+}
+
 .features {
   display: block;
   padding: 60px 0;
-  background-color: #f2f2f2;
-  text-align: center;
+  
+  text-align: left;
+  font-size:1.4em;
 }
 .seccontainer{
   text-align:center;
@@ -213,7 +248,12 @@ margin:auto;
   justify-content: center;
   align-items: center;
 }
-
+.video{
+  margin-top:5%;
+  margin-left:55%;
+  width:600px;
+  height:400px;
+}
 .features-item {
   text-align: center;
   margin: 20px;
@@ -229,116 +269,29 @@ margin:auto;
   line-height: 1.5;
 }
 
-/* Style for the "Pricing" section */
-.pricing {
-  display: block;
-  padding: 60px 0;
-  background-color: #fff;
-  text-align: center;
-}
 
-.pricing-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.pricing-item {
-  text-align: center;
-  padding: 30px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  margin: 20px;
-}
-
-.pricing-item h3 {
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-}
-
-.pricing-item p {
-  font-size: 1.1rem;
-  line-height: 1.5;
-}
-/* style for pricing */
-
-.pricingcont{
-  width:100%;
-  display:flex;
-  justify-content: space-evenly;
-  flex-direction: row;
-}
 .section-header{
-  height:50px;
-}
-/* Style for the "Testimonials" section */
-.testimonials {
-  display: block;
-  padding: 60px 0;
-  background-color: #f2f2f2;
-  text-align: center;
-}
-
-.testimonials-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.testimonials-item {
-  text-align: center;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  padding: 30px;
-  margin: 20px;
-}
-
-.testimonials-item h3 {
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-}
-
-.testimonials-item p {
-  font-size: 1.1rem;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.testimonials-item img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  margin-bottom: 10px;
-}
-
-.why{
-  background:#1051A5;
-  padding:30px;
-  font-size:2em;
-  color:white;
-  margin:50px 20px;
-  border-radius: 50px;
- 
-}
-.why h3{
-  text-align:center;
-  animation:left 
-}
-.ben{
-  width:100%;
-}
-.sextion-header{
   width:100%;
   justify-content: center;
 }
 .section-header h2{
   text-align: center;
-  background:#1051A5;
   padding:20px;
   font-size:2em;
-  
+  width:fit-content;
+  margin:0 auto;
+  color:#0a366e;
+  position:relative;
+}
+.section-header h2::after{
+  content:'';
+  height:3px;
+  width:100%;
+  border-top:#0a366e solid 4px;
+  position:absolute;
+  bottom:0;
+  left:0;
 }
 .servwrap{
   width:100%;
@@ -347,6 +300,7 @@ margin:auto;
   gap:20px;
   justify-content: space-around;
   margin:50px 0;
+  flex-wrap: wrap;
 }
 .servitem{
   width:20%;
@@ -361,4 +315,298 @@ section{
 }
 .servitem img{
   width:100%;
+}
+.wrp{
+  display:flex;
+  width:100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.why{
+  background:#1051A5;
+  padding:30px;
+  font-size:2em;
+  color:white;
+  margin:50px 20px;
+  border-radius: 50px;
+  width:50%;
+}
+.why h3{
+  text-align:center;
+  animation:left 
+}
+.video{
+  margin-top:5%;
+  margin-left:0%;
+  width:600px;
+  height:400px;
+  border:10px inset #1051A5;
+}
+.img-flu:hover {
+  transform:scale(1.2);
+  -ms-transform:scale(1.2); /* IE 9 */
+  -moz-transform:scale(1.2); /* Firefox */
+  -webkit-transform:scale(1.2); /* Safari and Chrome */
+  -o-transform:scale(1.2); /* Opera */
+  
+}
+.card-img{
+  overflow:hidden;
+
+}
+.img-flu{
+  transition:1s ease-in-out;
+}
+.srvh3{
+  text-align:center;
+}
+
+.card h3{
+  text-align:center;
+  margin-top:15px;
+}
+.card {
+  justify-content: center;
+}
+/* TESTEMONIALS STYLE */
+
+#testimonials{
+  background: #1051A5;
+  width:70%;
+  margin:50px auto;
+  height:70vh;
+  align-items: center;
+  border:solid 15px rgb(15, 61, 77);
+  border-radius:30px;
+  box-shadow: 0 30px 50px rgba(0,0,0, 0.25), 0 20px 20px rgba(0,0,0,0.22);
+
+}
+.testis-hero{
+  height: 70vh;
+  width: 100%;
+  position: relative;
+  /* opacity: 0.5; */
+}
+#testimonials h1{
+  color:white;
+  letter-spacing: 5px;
+  font-family: 'Satisfy', cursive;
+  padding:50px;
+}
+.testis-hero h1{
+  text-align: center;
+  padding-top: 80px;
+  font-size: 40px;
+  color: blue;
+}
+
+.testis-slide-row{
+  display: flex;
+  width: 3200px;
+  transition: 1.0s;
+}
+
+.testis-slide-col{
+  width: 800px;
+  height: 400px;
+  position: relative;
+  opacity: 0.9;
+ 
+}
+
+.testis-user-img{
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  border-radius:50%;
+}
+
+.testis-user-img img{
+  height: 100%;
+  border-radius: 50%;
+}
+
+.testis-user-text{
+  background: #2d3a59;
+  width: 420px;
+  height: 270px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50px;
+  color: #d3d4d6;
+  padding: 45px;
+  box-sizing: border-box;
+  z-index: 2;
+}
+
+.testis-user-text p{
+  font-size:  18px;
+  line-height: 24px;
+}
+
+
+.testis-user-text h3{
+  margin: 35px 0 5px;
+  color: #fff;
+}
+
+.testis-container{
+  width: 800px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.testis-indicator{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -50px;
+}
+
+.testis-btn{
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  margin: 4px;
+  border-radius: 15px;
+  background: #fff;
+  cursor: pointer;
+  transition: 1.0s;
+}
+
+.testis-active{
+  width: 45px;
+}
+
+
+.testis-testimonial{
+  width:100%;
+  height: 100%;
+  overflow: hidden;
+}
+/* PRICING STYLE */
+
+.coont{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 2rem;
+  
+}
+.pricing{
+  width:100%;
+  
+}
+.pricing h1{
+  color:#1051A5;
+  font-size:3em;
+  text-shadow:-5px -1px #254cb6af , -1px 4px #547caa7c , 0 10px 3px #7277a7a4;
+}
+
+.card-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 320px;
+  height: auto;
+  background-color: #1051A5;
+  color:white;
+  border-radius: 20px;
+  box-shadow: 0 5px 14px rgba(0,0,0, 0.25), 0 5px 5px rgba(0,0,0,0.22);
+  padding: 2rem;
+  margin: 1rem;
+  transition: all 0.2s ease-in;
+}
+
+.card-wrapper:hover{
+  transform: scale(1.2);
+  transition: 0.3s;
+}
+
+.card-header{
+  margin: 1rem;
+ 
+}
+
+.card-header h2{
+  padding: 1.2rem;
+}
+
+.card-wrapper:hover .card-header h2{
+  transform:  scale(1.2);
+  color: rgb(108, 188, 202);
+  letter-spacing: 2;
+}
+
+
+.card-header img{
+  width: 200px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 30%;
+}
+
+.card-detail{
+  width: 100%;
+}
+
+.card-detail p{
+  padding: 0.6rem 1.5rem;
+  font-size: 1rem;
+  
+}
+
+.card-detail p:hover{
+  border-bottom: 1px solid grey;
+  font-size: 1.1rem;
+}
+
+.check {
+  color: blue;
+}
+
+.nocheck{
+  color: red;
+}
+
+.card-price{
+  display: flex;
+  align-items: flex-start;
+  margin: 1rem;
+}
+
+.card-price p{
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+
+.card-price p sup,
+.card-price p sub{
+  font-size: 1rem;
+}
+
+.card-button {
+  padding: 0.6rem 2rem;
+  border: 2px solid blue;
+  background-color: lightblue;
+  color: black;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.3s ease-in;
+}
+
+.card-button:hover{
+  border: 2px solid lightblue;
+  background-color: transparent;
+  color:#4bc5eb;
+  font-weight: bold;
+
 }
